public class BestGasMaskFinder extends ItemFinder<GasMask> {
    @Override
    public void visit(GasMask gasMask) {
        // Implementation goes here
    }

    @Override
    public GasMask findIn(Inventory inventory) {
        // Implementation goes here
        return null;
    }
}