public class BestTvszFinder extends ItemFinder<Tvsz> {
    @Override
    public void visit(Tvsz tvsz) {
        // Implementation goes here
    }

    @Override
    public Tvsz findIn(Inventory inventory) {
        // Implementation goes here
        return null;
    }
}