public interface IHasLocation {
    public Room getLocation();
}
