public class WetEffect extends RoomEffect {
    @Override
    public void applyEffect(Professor professor) {
        // Implementation goes here
    }

    @Override
    public void applyEffect(Student student) {
        // Implementation goes here
    }
}